tests/baselines/reference/computedPropertyNames27_ES6.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames27_ES6.ts(4,7): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames27_ES6.ts (1 errors) ====
    class Base {
    }
    class C extends Base {
        [(super(), "prop")]() { }
          ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
    }